[package]
name = "libp2p-iroh"
description = "iroh quic as libp2p transport"
license = "MIT"
authors = ["Zacharias Boehler <rustonbsd@mailfence.com>"]
repository = "https://github.com/rustonbsd/libp2p-iroh"
homepage = "https://rustonbsd.github.io/"
readme = "README.md"
keywords = ["networking"]
categories = ["network-programming"]
version = "0.0.1"
edition = "2024"

[dependencies]
libp2p-core = "0.43"
libp2p-identity = "0.2"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread","macros"] }
tokio-util = { version = "0.7" }
iroh = { version =  "0.93", default-features = false }
rand = "0.9"

futures = "0.3"
futures-timer = "3.0.3"
actor-helper = { version = "0.2", features = ["tokio"] }

tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }