[package]
name = "libp2p-iroh"
description = "iroh quic as libp2p transport"
license = "MIT"
authors = ["Zacharias Boehler <rustonbsd@mailfence.com>"]
repository = "https://github.com/rustonbsd/libp2p-iroh"
homepage = "https://rustonbsd.github.io/"
readme = "README.md"
keywords = ["networking"]
categories = ["network-programming"]
version = "0.1.1"
edition = "2024"

[dependencies]
libp2p-core = "0.43"
libp2p-identity = "0.2"
libp2p-swarm = { version = "0.47", optional = true, features = ["macros"] }
libp2p-kad = { version = "0.48", optional = true }
libp2p = { version = "0.56", optional = true, default-features = false }
n0-future = "0.3.0"
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }
iroh = { version =  "0.94", default-features = false }
rand = "0.9"

futures = "0.3"
futures-timer = "3.0.3"

tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["swarm", "discovery-pkarr-dht"]
swarm = ["libp2p-swarm", "libp2p-kad", "libp2p"]
rt-multi-thread = ["tokio/rt-multi-thread"]
discovery-pkarr-dht = ["iroh/discovery-pkarr-dht"]
