[package]
name = "libp2p-iroh"
description = "iroh quic as libp2p transport"
license = "MIT"
authors = ["Zacharias Boehler <rustonbsd@mailfence.com>"]
repository = "https://github.com/rustonbsd/libp2p-iroh"
homepage = "https://rustonbsd.github.io/"
readme = "README.md"
keywords = ["networking"]
categories = ["network-programming"]
version = "0.1.2"
edition = "2024"

[dependencies]
libp2p-core = "0.43"
libp2p-identity = "0.2"
libp2p-swarm = { version = "0.47", optional = true, features = ["macros"] }
libp2p-kad = { version = "0.48", optional = true }
libp2p = { version = "0.56", optional = true, default-features = false }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread","macros"] }
tokio-util = { version = "0.7" }
iroh = { version =  "0.95", default-features = false, features = ["discovery-pkarr-dht"] }
rand = "0.9"

futures = "0.3"
futures-timer = "3.0.3"
actor-helper = { version = "0.2", features = ["tokio"] }

tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["swarm"]
swarm = ["libp2p-swarm", "libp2p-kad", "libp2p"]
